# LiteRT-LM-Server

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: README.md  api.md  architecture.md  faq.md  getting-started.md
src/: backend.rs  litert_backend.rs  litert_ffi.rs  main.rs  openai.rs
