[package]
name = "litert-lm-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["http2", "json", "macros"] }
clap = { version = "4.5.47", features = ["derive", "env"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }

[features]
# Placeholder for a future LiteRT-LM backend via the C API.
litert = []
